--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
-    "request": "latest"
+    "request": "latest",
+    "retryer": "^1.1.2"
   }
 }
