--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "js-yaml": "^3.13.1",
-    "websocket": "^1.0.30"
+    "websocket": "^1.0.30",
+    "mocha": "^8.0.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.2"
   }
 }
