--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./src/app.js"
+    "start": "node ./src/app.js",
+    "test": "npx mocha test/**/*.js --reporter spec"
   },
   "dependencies": {
     "js-yaml": "^3.13.1",
